# representative_sampler

./: CHANGELOG.md  CONTRIBUTING.md  README.md  TODO  prune_dataset.py  pyproject.toml  test_sample.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/representative_sampler/: __init__.py  coco_annotation_utils.py  representative_sampler.py
src/representative_sampler/core/: registry.py
src/representative_sampler/core/domain/: entities.py
src/representative_sampler/core/domain/engine/: orchestrator.py
src/representative_sampler/core/domain/ports/: data_ingest_port.py
src/representative_sampler/core/domain/strategies/: base_embedder.py  base_scorer.py  base_strategy.py  centroid_strategy.py  clip_embedder.py  cluster_entropy_base_sampler.py  cluster_random_sampler.py  cluster_scorer.py  (+12 more)
src/representative_sampler/core/embedder/: base_embedder.py  clip_embedder.py
src/representative_sampler/core/io/: baseio.py
src/representative_sampler/core/sampler/: base_sampler.py  cluster_entropy_base_sampler.py  cluster_random_sampler.py  generic_sampler.py  histogram_sampler.py
src/representative_sampler/core/scorer/: base_scorer.py  cluster_scorer.py  ensemble_scorer.py  entropy_scorer.py  feature_entropy_scorer.py  kmeans_entropy_scorer.py  proximity_scorer.py  uniqueness_scorer.py
src/representative_sampler/driver/: sampler_cli.py
src/representative_sampler/engine/: sampling_orchestrator.py
src/representative_sampler/io/: local_io.py
src/representative_sampler/orchestration/: sampling_orchestrator.py
tests/: test_representative_sampler.py
(+5 files in other folders)
