[tool.poetry]
name = "representative_sampler"
version = "0.1.0"
description = "Sample data representatively"
authors = ["linus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
