[tool.poetry]
name = "representative_sampler"
version = "0.1.0"
description = "Sample data representatively"
authors = ["linus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datumaro = "^1.9.1"
cpauger = "1.1.2"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
python-semantic-release = "10.1.0"
poetry = "2.1.3"
pytest-cov = "^5.0.0"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^2.0.0"
sphinx = "7.4.7"

[tool.semantic_release.branch.main]
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <auto-build>"

[tool.semantic_release.publish]
upload_to_vcs_release=true
dist_glob_patterns = ["dist/"]